# VariantTest

./: .gitignore  CMakeLists.txt  README.md
Drawing/: CMakeLists.txt  drawCircle.cpp  drawRectangle.cpp
Drawing/include/: drawing.hpp
Objects/: CMakeLists.txt
Objects/include/: Circle.hpp  Object.hpp  Objects.hpp  Rectangle.hpp
VariantTest/: CMakeLists.txt  Drawer.hpp  VariantTest.cpp  VariantTest.h
